--- a/consumers_jobs.yaml
+++ b/consumers_jobs.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: benchmark-producer-job
+  name: benchmark-consumer-job
 spec:
   completions: 1
   parallelism: 1
@@ -9,7 +9,7 @@ spec:
     spec:
       containers:
         - name: benchmark-producer
-          image: gitlab-registry.cern.ch/cmsos/k8sbox/rabbitmq/cmsos-x86_64-rabbitmq:0.0.0.1
+          image: gitlab-registry.cern.ch/cmsos/k8sbox/rabbitmq/cmsos-x86_64-rabbitmq:0.0.0.5
           env:
             - name: BROKER_IP
               value: "spare-c2e38-30-04"
@@ -18,10 +18,17 @@ spec:
           volumeMounts:
             - mountPath: /data
               name: data-volume
-          command: ["/opt/benchmark/bin/consumer"]
-          args: ["--username", "default_user_IA25ZnsK4W-fVt5dqAk", "--password", "Mmsq35eOrI_iFNpl7uIPAXPX17B73pAs", "--qos", "1", "--duration", "1000", "--middle", "80"]
+          command: [ "/opt/benchmark/bin/consumer" ]
+          args: [
+            "--username", "default_user_IA25ZnsK4W-fVt5dqAk",
+            "--password", "Mmsq35eOrI_iFNpl7uIPAXPX17B73pAs",
+            "--qos", "1",
+            "--separators", "4",
+            "--directory", "data",
+            "-f"
+          ]
       volumes:
         - name: data-volume
           hostPath:
-            path: ./data
+            path: /nfshome0/dkosc/data
       restartPolicy: Never
