--- a/producers_jobs.yaml
+++ b/producers_jobs.yaml
@@ -3,13 +3,13 @@ kind: Job
 metadata:
   name: benchmark-producer-job
 spec:
-  completions: 200
-  parallelism: 200
+  completions: 2
+  parallelism: 2
   template:
     spec:
       containers:
         - name: benchmark-producer
-          image: gitlab-registry.cern.ch/cmsos/k8sbox/rabbitmq/cmsos-x86_64-rabbitmq:0.0.0.1
+          image: gitlab-registry.cern.ch/cmsos/k8sbox/rabbitmq/cmsos-x86_64-rabbitmq:0.0.0.5
           env:
             - name: BROKER_IP
               value: "spare-c2e38-30-04"
@@ -19,9 +19,15 @@ spec:
             - mountPath: /data
               name: data-volume
           command: ["/opt/benchmark/bin/producer"]
-          args: ["--period", "0", "--min", "1", "--max", "8192", "--username", "default_user_IA25ZnsK4W-fVt5dqAk", "--password", "Mmsq35eOrI_iFNpl7uIPAXPX17B73pAs", "--qos", "1", "--duration", "1000", "--middle", "80"]
+          args: ["--period", "0",
+                 "--min", "1",
+                 "--max", "8192",
+                 "--username", "default_user_IA25ZnsK4W-fVt5dqAk",
+                 "--password", "Mmsq35eOrI_iFNpl7uIPAXPX17B73pAs",
+                 "--qos", "1",
+                 "--messages", "1000"]
       volumes:
         - name: data-volume
           hostPath:
-            path: ./data
+            path: /nfshome0/dkosc/data
       restartPolicy: Never
