--- a/benchmark/templates/consumer.yaml
+++ b/benchmark/templates/consumer.yaml
@@ -12,9 +12,9 @@ spec:
           image: gitlab-registry.cern.ch/cmsos/k8sbox/rabbitmq/cmsos-x86_64-rabbitmq:{{ .Values.consumer.version }}
           env:
             - name: BROKER_IP
-              value: {{ .Values.broker }}
+              value: "{{ .Values.broker }}"
             - name: MQTT_PORT
-              value: {{ .Values.port }}
+              value: "{{ .Values.port }}"
           volumeMounts:
             - mountPath: /data
               name: data-volume
