--- a/benchmark/values.yaml
+++ b/benchmark/values.yaml
@@ -5,25 +5,19 @@ producer:
   version: 0.0.0.5
   name: benchmark-producer-job
   instances:
-    total: 20
-    parallel: 20
+    total: 2
+    parallel: 2
   flags:
-    [
-      "--period",
-      "0",
-      "--min",
-      "1",
-      "--max",
-      "8192",
-      "--username",
-      "default_user_IA25ZnsK4W-fVt5dqAk",
-      "--password",
-      "Mmsq35eOrI_iFNpl7uIPAXPX17B73pAs",
-      "--qos",
-      "1",
-      "--messages",
-      "1000",
-    ]
+    '[
+    "--fresh",
+    "--period", "0",
+    "--min", "72",
+    "--max", "72",
+    "--username", "default_user_IA25ZnsK4W-fVt5dqAk",
+    "--password", "Mmsq35eOrI_iFNpl7uIPAXPX17B73pAs",
+    "--qos", "1",
+    "--messages", "10000000"
+    ]'
   path: /nfshome0/dkosc/data
 
 consumer:
@@ -33,17 +27,12 @@ consumer:
     total: 1
     parallel: 1
   flags:
-    [
-      "--username",
-      "default_user_IA25ZnsK4W-fVt5dqAk",
-      "--password",
-      "Mmsq35eOrI_iFNpl7uIPAXPX17B73pAs",
-      "--qos",
-      "1",
-      "--separators",
-      "4",
-      "--directory",
-      "data",
-      "-f",
-    ]
+    '[
+    "--username", "default_user_IA25ZnsK4W-fVt5dqAk",
+    "--password", "Mmsq35eOrI_iFNpl7uIPAXPX17B73pAs",
+    "--qos", "1",
+    "--duration", "100",
+    "--ratio", "80",
+    "--fresh"
+    ]'
   path: /nfshome0/dkosc/data
