Adding secret with credentials

--- a/rabbitmq_cluster.yaml
+++ b/rabbitmq_cluster.yaml
@@ -6,11 +6,31 @@ spec:
   replicas: 3
   service:
     type: NodePort
+  override:
+    service:
+      spec:
+        ports:
+          - name: http
+            protocol: TCP
+            port: 15672
+            targetPort: 15672
+            nodePort: 31672
+          - name: amqp
+            protocol: TCP
+            port: 5672
+            targetPort: 5672
+            nodePort: 30672
+          - name: mqtt
+            protocol: TCP
+            port: 1883
+            targetPort: 1883
+            nodePort: 31883
   image: rabbitmq:3.12-management
+  secretBackend:
+    externalSecret:
+      name: "credentials"
   rabbitmq:
     additionalConfig: |
-      log.console.level = debug 
-      mqtt.default_user = user
-      mqtt.default_pass = password
+      log.console.level = debug
     additionalPlugins:
       - rabbitmq_mqtt
