--- a/benchmark/templates/consumer.yaml
+++ b/benchmark/templates/consumer.yaml
@@ -7,8 +7,20 @@ spec:
   parallelism: {{ .Values.consumer.instances.parallel }}
   template:
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: job-name
+                      operator: In
+                      values:
+                        - {{ .Values.consumer.name }}
+                topologyKey: "kubernetes.io/hostname"
       containers:
-        - name: benchmark-producer
+        - name: benchmark-consumer
           image: gitlab-registry.cern.ch/cmsos/k8sbox/rabbitmq/cmsos-x86_64-rabbitmq:{{ .Values.consumer.version }}
           env:
             - name: BROKER_IP
