--- a/benchmark/templates/producers.yaml
+++ b/benchmark/templates/producers.yaml
@@ -7,6 +7,18 @@ spec:
   parallelism: {{ .Values.producer.instances.parallel }}
   template:
     spec:
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchExpressions:
+                    - key: job-name
+                      operator: In
+                      values:
+                        - {{ .Values.producer.name }}
+                topologyKey: "kubernetes.io/hostname"
       containers:
         - name: benchmark-producer
           image: gitlab-registry.cern.ch/cmsos/k8sbox/rabbitmq/cmsos-x86_64-rabbitmq:{{ .Values.producer.version }}
