--- a/consumers_jobs.yaml
+++ b/consumers_jobs.yaml
@@ -36,7 +36,7 @@ spec:
             "--password", "password",
             "--qos", "1",
             "--duration", "100",
-            "--ratio", "80"
+            "--ratio", "80",
             "--fresh"
           ]
       volumes:
