Feat: Quorum queue are set as defaults

--- a/benchmark/templates/broker.yaml
+++ b/benchmark/templates/broker.yaml
@@ -32,6 +32,7 @@ spec:
   rabbitmq:
     additionalConfig: |
       log.console.level = debug
+      mqtt.durable_queue_type = quorum
     additionalPlugins:
       - rabbitmq_mqtt
 ---
