--- a/benchmark/templates/producers.yaml
+++ b/benchmark/templates/producers.yaml
@@ -24,9 +24,9 @@ spec:
           image: gitlab-registry.cern.ch/cmsos/k8sbox/rabbitmq/cmsos-x86_64-rabbitmq:{{ .Values.producer.version }}
           env:
             - name: BROKER_IP
-              value: "{{ .Values.broker }}"
+              value: "{{ .Values.broker.ip }}"
             - name: MQTT_PORT
-              value: "{{ .Values.port }}"
+              value: "{{ .Values.broker.port }}"
           volumeMounts:
             - mountPath: /data
               name: data-volume
