--- a/rabbitmq_secret.yaml
+++ b/rabbitmq_secret.yaml
@@ -7,10 +7,10 @@ stringData:
   default_user.conf: |
     default_user = user
     default_pass = password
-  host: cmFiYml0LWNsdXN0ZXIuZGVmYXVsdC5zdmM
-  username: user
-  password: password
+  host: "cmFiYml0LWNsdXN0ZXIuZGVmYXVsdC5zdmM"
+  username: "user"
+  password: "password"
   port: "5672"
   mqtt-port: "1883"
-  provider: rabbitmq
-  type: rabbitmq
+  provider: "rabbitmq"
+  type: "rabbitmq"
