--- a/consumers_jobs.yaml
+++ b/consumers_jobs.yaml
@@ -41,5 +41,5 @@ spec:
       volumes:
         - name: data-volume
           hostPath:
-            path: /nfshome0/dkosc/data
+            path: ~/data
       restartPolicy: Never
