--- a/benchmark/templates/consumer.yaml
+++ b/benchmark/templates/consumer.yaml
@@ -8,6 +8,14 @@ spec:
   template:
     spec:
       affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: In
+                    values:
+                      - "{{ .Values.consumer.node.prefix}}*"
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - weight: 100
