--- a/benchmark/values.yaml
+++ b/benchmark/values.yaml
@@ -35,7 +35,16 @@ producer:
   path: "~/data"
   init_timeout: 600
   node:
-    prefix: "d3vrubu"
+    hostnames:
+      - "d3vrubu-c2e34-10-01"
+      - "d3vrubu-c2e34-12-01"
+      - "d3vrubu-c2e34-14-01"
+      - "d3vrubu-c2e34-16-01"
+      - "d3vrubu-c2e34-18-01"
+      - "d3vrubu-c2e34-29-01"
+      - "d3vrubu-c2e34-31-01"
+      - "d3vrubu-c2e34-33-01"
+      - "d3vrubu-c2e34-35-01"
 
 consumer:
   version: 0.0.1.3
@@ -55,4 +64,13 @@ consumer:
   path: "~/data"
   init_timeout: 600
   node:
-    prefix: "d3vrubu"
+    hostnames:
+      - "d3vrubu-c2e34-10-01"
+      - "d3vrubu-c2e34-12-01"
+      - "d3vrubu-c2e34-14-01"
+      - "d3vrubu-c2e34-16-01"
+      - "d3vrubu-c2e34-18-01"
+      - "d3vrubu-c2e34-29-01"
+      - "d3vrubu-c2e34-31-01"
+      - "d3vrubu-c2e34-33-01"
+      - "d3vrubu-c2e34-35-01"
