--- a/consumers_jobs.yaml
+++ b/consumers_jobs.yaml
@@ -15,7 +15,15 @@ spec:
                   - key: kubernetes.io/hostname
                     operator: In
                     values:
-                      - d3vrubu*
+                      - d3vrubu-c2e34-10-01
+                      - d3vrubu-c2e34-12-01
+                      - d3vrubu-c2e34-14-01
+                      - d3vrubu-c2e34-16-01
+                      - d3vrubu-c2e34-18-01
+                      - d3vrubu-c2e34-29-01
+                      - d3vrubu-c2e34-31-01
+                      - d3vrubu-c2e34-33-01
+                      - d3vrubu-c2e34-35-01
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
             - weight: 100
