--- a/benchmark/templates/broker.yaml
+++ b/benchmark/templates/broker.yaml
@@ -4,6 +4,19 @@ metadata:
   name: rabbit-cluster
 spec:
   replicas: {{ .Values.rabbitmq.replicas }}
+  template:
+    spec:
+      affinity:
+        nodeAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+            nodeSelectorTerms:
+              - matchExpressions:
+                  - key: kubernetes.io/hostname
+                    operator: In
+                    values:
+                      {{- range .Values.rabbitmq.node.hostnames }}
+                      - {{ . }}
+                      {{- end }}
   service:
     type: NodePort
   override:
