--- a/benchmark/values.yaml
+++ b/benchmark/values.yaml
@@ -10,6 +10,17 @@ rabbitmq:
     - rabbitmq_mqtt
   username: "user"
   password: "password"
+  node:
+    hostnames:
+      - "d3vrubu-c2e34-10-01"
+      - "d3vrubu-c2e34-12-01"
+      - "d3vrubu-c2e34-14-01"
+      - "d3vrubu-c2e34-16-01"
+      - "d3vrubu-c2e34-18-01"
+      - "d3vrubu-c2e34-29-01"
+      - "d3vrubu-c2e34-31-01"
+      - "d3vrubu-c2e34-33-01"
+      - "d3vrubu-c2e34-35-01"
   nodeport:
     mqtt: 31883
     management: 31567
