--- a/benchmark/templates/producers.yaml
+++ b/benchmark/templates/producers.yaml
@@ -42,7 +42,7 @@ spec:
               name: data-volume
           command: [
             "/bin/sh", "-c",
-            "curl --retry-connrefused --retry {{ .Values.producer.init_timeout }} --retry-delay 1 -u '{{ .Values.rabbitmq.username }}:{{ .Values.rabbitmq.password }}' 'http://rabbit-cluster:15672/api/nodes' && /opt/benchmark/bin/producer {{ .Values.producer.flags }}"
+            "curl --retry-connrefused --retry {{ .Values.producer.init_timeout }} --retry-delay 1 -u '{{ .Values.rabbitmq.client.username }}:{{ .Values.rabbitmq.client.password }}' 'http://rabbit-cluster:15672/api/nodes' && /opt/benchmark/bin/producer {{ .Values.producer.flags }}"
           ]
       volumes:
         - name: data-volume
